--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,38 @@
-crewai==0.28.8
-crewai-tools==0.1.6
-fastapi==0.104.1
-uvicorn==0.24.0
-pydantic==2.5.0
-python-multipart==0.0.6
-jinja2==3.1.2
-python-dotenv==1.0.0
-openai==1.3.7
-langchain==0.1.0
-langchain-openai==0.0.2
-pytest==7.4.3
-pytest-asyncio==0.21.1
-httpx==0.25.2
-pandas==2.1.4
-numpy==1.24.3
-python-docx==1.1.0
-PyPDF2==3.0.1
+# Core AI Framework - Updated for Google Gemini compatibility
+crewai>=0.203.0
+# Note: crewai-tools removed due to dependency conflicts with embedchain/chromadb
 
+# Web Framework
+fastapi>=0.104.0,<0.105.0
+uvicorn>=0.24.0,<0.25.0
+python-multipart>=0.0.6,<0.1.0
+jinja2>=3.1.0,<4.0.0
+
+# Data Validation
+pydantic>=2.4.0,<3.0.0
+
+# Environment Management
+python-dotenv>=1.0.0,<2.0.0
+
+# Google Gemini Integration
+google-generativeai>=0.8.0
+langchain>=0.3.0
+langchain-community>=0.3.0
+langchain-google-genai>=2.0.0
+
+# Testing
+pytest>=7.4.0,<8.0.0
+pytest-asyncio>=0.21.0,<0.22.0
+httpx>=0.25.0,<0.26.0
+
+# Data Processing
+pandas>=2.1.0,<3.0.0
+numpy>=1.24.0,<2.0.0
+
+# File Processing
+python-docx>=1.1.0,<2.0.0
+PyPDF2>=3.0.0,<4.0.0
+
+# Embeddings and Vector DB
+onnxruntime>=1.16.0
+chromadb>=0.4.0
